--- a/survey_form/index.html
+++ b/survey_form/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset='utf-8'>
   <title>Survey Form</title>
-  <link rel="stylesheet" href="survey_form_styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1 id="title">Survey Form</h1>
